{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 255,
  "lineage": "de4390a3-559c-d0d3-40ce-f495aabf9ad3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yarden-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d94a781b544c133",
            "arn": "arn:aws:ec2:eu-west-1:644435390668:instance/i-0400b260dae55a6a2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0400b260dae55a6a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "int-devops-bootcamp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034d70b5213c94349",
            "private_dns": "ip-10-0-1-110.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.110",
            "public_ip": "3.250.222.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-02-21T08:28:56Z",
                  "AutoTag_Creator": "yardenm"
                },
                "throughput": 0,
                "volume_id": "vol-0ccf7d6fc8824583f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa73dfef314e7923",
            "tags": {
              "AutoTag_CreateTime": "2023-02-21T08:28:56Z",
              "AutoTag_Creator": "yardenm",
              "Name": "yarden-from-tf1"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-02-21T08:28:56Z",
              "AutoTag_Creator": "yardenm",
              "Name": "yarden-from-tf1",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a0f3b0f0ee6c38d"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yarden-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d94a781b544c133",
            "arn": "arn:aws:ec2:eu-west-1:644435390668:instance/i-0a2bdd1479e82614e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2bdd1479e82614e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "int-devops-bootcamp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a7cf6a7f80cf34d",
            "private_dns": "ip-10-0-2-212.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.212",
            "public_ip": "34.255.4.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-02-21T08:28:56Z",
                  "AutoTag_Creator": "yardenm"
                },
                "throughput": 0,
                "volume_id": "vol-0113da8671430965e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e68712d6ad378f3",
            "tags": {
              "AutoTag_CreateTime": "2023-02-21T08:28:56Z",
              "AutoTag_Creator": "yardenm",
              "Name": "yarden-from-tf2"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-02-21T08:28:56Z",
              "AutoTag_Creator": "yardenm",
              "Name": "yarden-from-tf2",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a0f3b0f0ee6c38d"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:internet-gateway/igw-0b7621a652970bbb8",
            "id": "igw-0b7621a652970bbb8",
            "owner_id": "644435390668",
            "tags": {
              "Name": "yarden-GW"
            },
            "tags_all": {
              "Name": "yarden-GW",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "yarden-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:loadbalancer/app/yarden-lb-tf/060f3956bdec8527",
            "arn_suffix": "app/yarden-lb-tf/060f3956bdec8527",
            "desync_mitigation_mode": "defensive",
            "dns_name": "yarden-lb-tf-1572321519.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:loadbalancer/app/yarden-lb-tf/060f3956bdec8527",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yarden-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b36bf6ae6b91bc85"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e68712d6ad378f3"
              },
              {
                "subnet_id": "subnet-0aa73dfef314e7923"
              }
            ],
            "subnets": [
              "subnet-04e68712d6ad378f3",
              "subnet-0aa73dfef314e7923"
            ],
            "tags": {
              "Name": "yarden-lb"
            },
            "tags_all": {
              "Name": "yarden-lb",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "vpc_id": "vpc-0a6c557e2d57c52f4",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.one",
            "aws_subnet.two",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:listener/app/yarden-lb-tf/060f3956bdec8527/7d1896751cdc3a1d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:listener/app/yarden-lb-tf/060f3956bdec8527/7d1896751cdc3a1d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:loadbalancer/app/yarden-lb-tf/060f3956bdec8527",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.yarden-lb",
            "aws_lb_target_group.TG",
            "aws_security_group.lb-sg",
            "aws_subnet.one",
            "aws_subnet.two",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d",
            "arn_suffix": "targetgroup/yarden-target-group/85f4bde1f9aa408d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "yarden-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d-20230221082907452300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d",
            "target_id": "i-0400b260dae55a6a2"
          },
          "dependencies": [
            "aws_instance.yarden-ec2-1",
            "aws_lb_target_group.TG",
            "aws_security_group.ec2-sg",
            "aws_subnet.one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d-20230221082907527300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:644435390668:targetgroup/yarden-target-group/85f4bde1f9aa408d",
            "target_id": "i-0a2bdd1479e82614e"
          },
          "dependencies": [
            "aws_instance.yarden-ec2-2",
            "aws_lb_target_group.TG",
            "aws_security_group.ec2-sg",
            "aws_subnet.two"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:route-table/rtb-09ff54f49bfae05a7",
            "id": "rtb-09ff54f49bfae05a7",
            "owner_id": "644435390668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7621a652970bbb8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yarden-route"
            },
            "tags_all": {
              "Name": "yarden-route",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063531ed049b515a8",
            "route_table_id": "rtb-09ff54f49bfae05a7",
            "subnet_id": "subnet-0aa73dfef314e7923"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.public_rt",
            "aws_subnet.one",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021a60d40d88e877f",
            "route_table_id": "rtb-09ff54f49bfae05a7",
            "subnet_id": "subnet-04e68712d6ad378f3"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.public_rt",
            "aws_subnet.two",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:security-group/sg-00a0f3b0f0ee6c38d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connect to lb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a0f3b0f0ee6c38d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh to ec2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "connect to lb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b36bf6ae6b91bc85"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "yarden-ec2-SG",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yarden-ec2-SG-tf"
            },
            "tags_all": {
              "Name": "yarden-ec2-SG-tf",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:security-group/sg-0b36bf6ae6b91bc85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "trafic to lb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b36bf6ae6b91bc85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 to LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "yarden-lb-SG",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yarden-lb-SG-tf"
            },
            "tags_all": {
              "Name": "yarden-lb-SG-tf",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:subnet/subnet-0aa73dfef314e7923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa73dfef314e7923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "one"
            },
            "tags_all": {
              "Name": "one",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:subnet/subnet-04e68712d6ad378f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e68712d6ad378f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "two"
            },
            "tags_all": {
              "Name": "two",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            },
            "vpc_id": "vpc-0a6c557e2d57c52f4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:644435390668:vpc/vpc-0a6c557e2d57c52f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdd1d0b239759e42",
            "default_route_table_id": "rtb-019aacba35f60babc",
            "default_security_group_id": "sg-0107b9f0b3617a035",
            "dhcp_options_id": "dopt-c0a3dca6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6c557e2d57c52f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019aacba35f60babc",
            "owner_id": "644435390668",
            "tags": {
              "Name": "yarden VPC"
            },
            "tags_all": {
              "Name": "yarden VPC",
              "Owner": "yarden",
              "bootcamp": "int",
              "expiration_date": "30-02-23"
            }
          }
        }
      ]
    }
  ]
}